--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -111,25 +111,28 @@
     "\n",
     "file_path = \"files/oedometer/oedo_trainingsdata.xlsx\"\n",
     "sheet_name = \"Res\"\n",
+    "selected_columns = [1, 3, 5] # Spaltenauswahl Spalte B, D und E\n",
+    "row_start_range = 0\n",
     "\n",
-    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "def extract_excel(file_path, sheet_name, selected_columns, row_start_range):\n",
+    "    df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Dynamische Ermittlung der letzten Zeile mit Daten\n",
+    "    row_start_range = 0  # Startet bei Zeile 6 (0-basiert)\n",
+    "    row_end_range = df.dropna(how=\"all\").last_valid_index() + 1  # Letzte Zeile mit Daten\n",
+    "        \n",
+    "    # Daten extrahieren\n",
+    "    data_subset = df.iloc[row_start_range:row_end_range, selected_columns]\n",
+    "    data_dict = {col: np.array(data_subset[col]) for col in data_subset.columns}\n",
+    "    \n",
+    "    if debug_mode:\n",
+    "        print('‼️Geladene Exceldaten')\n",
+    "        print(data_dict)\n",
+    "    \n",
+    "    # Daten als dict speichern\n",
+    "    return data_dict\n",
     "\n",
-    "# Dynamische Ermittlung der letzten Zeile mit Daten\n",
-    "row_start_range = 0  # Startet bei Zeile 6 (0-basiert)\n",
-    "row_end_range = df.dropna(how=\"all\").last_valid_index() + 1  # Letzte Zeile mit Daten\n",
-    "\n",
-    "# Spaltenauswahl Spalte B, D und E\n",
-    "selected_columns = [1, 3, 5]  # Spalten-Indices\n",
-    "\n",
-    "# Daten extrahieren\n",
-    "data_subset = df.iloc[row_start_range:row_end_range, selected_columns]\n",
-    "\n",
-    "# Daten als dict speichern\n",
-    "data_dict = {col: np.array(data_subset[col]) for col in data_subset.columns}\n",
-    "\n",
-    "if debug_mode:\n",
-    "    print('‼️Geladene Exceldaten')\n",
-    "    print(data_dict)"
+    "data_dict = extract_excel(file_path, sheet_name, selected_columns, row_start_range)"
    ]
   },
   {
@@ -408,6 +411,15 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -420,16 +432,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (2) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a8d408e36304943b0c363b09d82dce9",
+       "model_id": "c581f3875422482caa7b52fa2c96aac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +467,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(2.5191e-07), 'mean_loss': tensor(2.5191e-07)}"
+       "{'data_loss': tensor(5.7616e-07), 'mean_loss': tensor(5.7616e-07)}"
       ]
      },
      "execution_count": 7,
@@ -537,7 +546,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -546,26 +557,26 @@
       "Data-Loss bis simga_19\n",
       "\n",
       "     sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
-      "0    1.00000         0.20000              0.20074                 -0.00074\n",
-      "1    1.20000         0.24000              0.23925                  0.00075\n",
-      "2    1.44000         0.28800              0.28735                  0.00065\n",
-      "3    1.72800         0.34560              0.34623                 -0.00063\n",
-      "4    2.07360         0.41472              0.41529                 -0.00057\n",
-      "5    2.48832         0.49766              0.49728                  0.00038\n",
-      "6    2.98598         0.59720              0.59662                  0.00058\n",
-      "7    3.58318         0.71664              0.71690                 -0.00027\n",
-      "8    4.29982         0.85996              0.86075                 -0.00078\n",
-      "9    5.15978         1.03196              1.03216                 -0.00021\n",
-      "10   6.19174         1.23835              1.23792                  0.00043\n",
-      "11   7.43008         1.48602              1.48561                  0.00040\n",
-      "12   8.91610         1.78322              1.78302                  0.00020\n",
-      "13  10.69932         2.13986              2.13990                 -0.00004\n",
-      "14  12.83918         2.56784              2.56816                 -0.00032\n",
-      "15  15.40702         3.08140              3.08161                 -0.00020\n",
-      "16  18.48843         3.69769              3.69764                  0.00004\n",
-      "17  22.18611         4.43722              4.43689                  0.00033\n",
-      "18  26.62333         5.32467              5.32402                  0.00065\n",
-      "19  31.94800         6.38960              6.39031                 -0.00071\n"
+      "0    1.00000         0.20000              0.20023                 -0.00023\n",
+      "1    1.20000         0.24000              0.23986                  0.00014\n",
+      "2    1.44000         0.28800              0.28768                  0.00032\n",
+      "3    1.72800         0.34560              0.34581                 -0.00021\n",
+      "4    2.07360         0.41472              0.41472                 -0.00000\n",
+      "5    2.48832         0.49766              0.49814                 -0.00048\n",
+      "6    2.98598         0.59720              0.59679                  0.00041\n",
+      "7    3.58318         0.71664              0.71615                  0.00048\n",
+      "8    4.29982         0.85996              0.85938                  0.00059\n",
+      "9    5.15978         1.03196              1.03295                 -0.00099\n",
+      "10   6.19174         1.23835              1.23977                 -0.00142\n",
+      "11   7.43008         1.48602              1.48690                 -0.00089\n",
+      "12   8.91610         1.78322              1.78347                 -0.00025\n",
+      "13  10.69932         2.13986              2.13934                  0.00052\n",
+      "14  12.83918         2.56784              2.56639                  0.00144\n",
+      "15  15.40702         3.08140              3.08001                  0.00140\n",
+      "16  18.48843         3.69769              3.69703                  0.00066\n",
+      "17  22.18611         4.43722              4.43745                 -0.00023\n",
+      "18  26.62333         5.32467              5.32596                 -0.00130\n",
+      "19  31.94800         6.38960              6.38960                  0.00000\n"
      ]
     },
     {
@@ -679,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
@@ -706,6 +717,128 @@
     "pl.plot_loss(trainer, label='mean_loss', logy=True, filename='./graph/visual_loss.png')\n",
     "display(Markdown('![Loss Kurve](./graph/visual_loss.png)'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b979e1d6-7feb-442b-b59f-afe2593f58d6",
+   "metadata": {},
+   "source": [
+    "# Fazit\n",
+    "\n",
+    "Das Problem dieser Implementation ist, dass wir das Modell mit 20 Inpt Parametern gefüttert haben, die daraufhin auch immer erneut gefordert werden. Es ist also nicht möglich einen einzelnen Wert zu bestimmen, da das Modell nun weitere 19 Parameter braucht, um weitere Ausgaben zu generieren. <br>\n",
+    "\n",
+    "Im folgenden wird dargestellt, wie es aussehen würde, wenn man bspw. das Modell mit einem Tensor füttert, der nur den ersten Wert mit einem Wert gefüllt hat (Rest 0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "38bb6ae2-4899-447e-932e-73df4d710efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "‼️Geladene Exceldaten\n",
+      "{'sigma_0': array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "      dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'sigma_1': array([0.2, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+      "       0. , 0. , 0. , 0. , 0. , 0. , 0. ])}\n",
+      "Data-Loss bis sigma_19\n",
+      "\n",
+      "    sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
+      "0         1             0.2              0.20023                 -0.00023\n",
+      "1         0             0.0              0.03861                 -0.03861\n",
+      "2         0             0.0              0.03861                 -0.03861\n",
+      "3         0             0.0              0.03861                 -0.03861\n",
+      "4         0             0.0              0.03861                 -0.03861\n",
+      "5         0             0.0              0.03861                 -0.03861\n",
+      "6         0             0.0              0.03861                 -0.03861\n",
+      "7         0             0.0              0.03861                 -0.03861\n",
+      "8         0             0.0              0.03861                 -0.03861\n",
+      "9         0             0.0              0.03861                 -0.03861\n",
+      "10        0             0.0              0.03861                 -0.03861\n",
+      "11        0             0.0              0.03861                 -0.03861\n",
+      "12        0             0.0              0.03861                 -0.03861\n",
+      "13        0             0.0              0.03861                 -0.03861\n",
+      "14        0             0.0              0.03861                 -0.03861\n",
+      "15        0             0.0              0.03861                 -0.03861\n",
+      "16        0             0.0              0.03861                 -0.03861\n",
+      "17        0             0.0              0.03861                 -0.03861\n",
+      "18        0             0.0              0.03861                 -0.03861\n",
+      "19        0             0.0              0.03861                 -0.03861\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare.xlsx\", sheet_name=\"Res\", selected_columns=[1, 3, 5], row_start_range=0)\n",
+    "\n",
+    "# Erstelle die Eingabedaten als LabelTensor für das trainierte Modell\n",
+    "input_data = LabelTensor(torch.tensor(\n",
+    "    np.column_stack((new_data['sigma_0'], new_data['delta_epsilon'])), dtype=torch.float\n",
+    "), ['sigma_0', 'delta_epsilon'])\n",
+    "\n",
+    "# Model-Vorhersage für sigma_1 berechnen\n",
+    "sigma_1_pred = pinn(input_data).detach().numpy()\n",
+    "\n",
+    "# Plot der wahren vs. vorhergesagten Werte\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "# True Solution als Punkte darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], new_data['sigma_1'][0:max_i], label=\"True Solution (sigma_1)\", color='blue', marker='o')\n",
+    "# NN Prediction als Linie darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], sigma_1_pred[0:max_i], label=\"NN Prediction (sigma_1)\", linestyle='solid', color='red')\n",
+    "\n",
+    "plt.xlabel(\"sigma_0\")\n",
+    "plt.ylabel(\"sigma_1\")\n",
+    "plt.title(f\"Prediction vs. True Solution (delta_epsilon=0.0005, max_i={str(max_i-1)})\")\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.savefig('./graph/visual_prediction-vs-truesolution_comp.png')\n",
+    "\n",
+    "# Überprüfen, ob die notwendigen Variablen existieren\n",
+    "if 'data_dict' in globals() and 'sigma_1_pred' in globals():\n",
+    "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
+    "    data_loss_table = pd.DataFrame({\n",
+    "        \"sigma_t\": np.round(new_data[\"sigma_0\"][0:max_i], 5),\n",
+    "        \"True sigma_t+1\": np.round(new_data[\"sigma_1\"][0:max_i], 5),\n",
+    "        \"Predicted sigma_t+1\": np.round(sigma_1_pred[0:max_i].flatten(), 5),\n",
+    "        \"Loss (True - Predicted)\": np.round(new_data[\"sigma_1\"][0:max_i] - sigma_1_pred[0:max_i].flatten(), 5)\n",
+    "    })\n",
+    "\n",
+    "    pd.set_option('display.max_rows', None)  # Keine Begrenzung der Zeilen\n",
+    "    pd.set_option('display.max_columns', None)  # Keine Begrenzung der Spalten\n",
+    "    pd.set_option('display.width', 1000)  # Breite für bessere Lesbarkeit\n",
+    "\n",
+    "    print(f'Data-Loss bis sigma_{str(max_i-1)}\\n')\n",
+    "    print(data_loss_table)\n",
+    "else:\n",
+    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")\n",
+    "\n",
+    "display(Markdown('![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander.'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb148e33-5cce-4311-91f3-f4e11197f8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
